--- a/baseStatic/login.html
+++ b/baseStatic/login.html
@@ -26,50 +26,28 @@
 	</head>
 	<body class="homepage">
 
-		<!-- Header Wrapper -->
-			<div id="header-wrapper" class="wrapper">
+		<!-- login Wrapper -->
+			<div id="login-wrapper" class="wrapper" style="padding: 0em 0 18em 0">
 				<div class="container">
 					<div class="row">
 						<div class="12u">
-						
-							<!-- Header -->
-								<div id="header">
-									<!-- Login -->
-									<div id="login">
-										<a href="login.html">登陆</a>
-										<span>|</span>
-										<a href="javascript:;">注册</a>
-									</div>
-									<!-- /Login -->
-
-									<!-- Logo -->
-										<div id="logo">
-											<h1><a href="#">滚动页面滚动页面</a></h1>
-											<span class="byline">标语啥的 标语啥的 标语啥的</span>
-										</div>
-									<!-- /Logo -->
-									
-									<!-- Nav -->
-										<nav id="nav">
-											<ul>
-												<li class="current_page_item"><a href="index.html">首页</a></li>
-												<li><a href="right-sidebar.html">彩妆</a> </li>
-												<li><a href="right-sidebar.html">护肤</a></li>
-												<li><a href="left-sidebar.html">服装</a></li>
-												<li><a href="no-sidebar.html">杂物</a></li>
-											</ul>
-										</nav>
-									<!-- /Nav -->
-
-								</div>
-							<!-- /Header -->
+							<!-- login body -->
+							<div id="login_body">
+                                <form name="loginForm" id="loginForm">
+									<input type="text" id="login_username"><br>
+									<input type="password"  id="login_password"><br>
+									<input type="submit" id="login_button" >
+								</form>
+							</div>
+							<!-- /login body -->
 
 						</div>
 					</div>
 				</div>
 			</div>
 		<!-- /Header Wrapper -->
-
-
 	</body>
+    <script>
+
+	</script>
 </html>
